--- a/Dockerfile-gke
+++ b/Dockerfile-gke
@@ -27,6 +27,17 @@ RUN apk --no-cache add bash=${BASH_VERSION} \
             yq-go \
             python3
 
+RUN curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-linux-x86_64.tar.gz \
+    && tar -xf google-cloud-cli-linux-x86_64.tar.gz \
+    && ./google-cloud-sdk/install.sh --path-update=true
+
+ENV PATH=$PATH:/usr/local/gcloud/google-cloud-sdk/bin
+
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
+    && chmod +x kubectl \
+    && mv kubectl /usr/local/bin/ 
+
+RUN ./google-cloud-sdk/bin/gcloud components install gke-gcloud-auth-plugin
 
 RUN curl https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz  --output - | \
     tar -xzf - -C /tmp/ \
