--- a/Dockerfile-gke
+++ b/Dockerfile-gke
@@ -37,7 +37,8 @@ RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/s
     && chmod +x kubectl \
     && mv kubectl /usr/local/bin/ 
 
-RUN ./google-cloud-sdk/bin/gcloud components install gke-gcloud-auth-plugin
+RUN ./google-cloud-sdk/bin/gcloud components install gke-gcloud-auth-plugin \
+    && mv /go/google-cloud-sdk/bin/gke-gcloud-auth-plugin /usr/local/bin/gke-gcloud-auth-plugin
 
 RUN curl https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz  --output - | \
     tar -xzf - -C /tmp/ \
